#
# Copyright (c) 2013-2017 Tomas Palazuelos
#
# Distributed under the MIT Software License. (See accompanying file LICENSE.md)
#
#--------------------------------------------------------------------------------------------------
# Example: date-example
#
executable('date-example', 
           'date-example.cpp',
           dependencies: orion_dep,
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: datetime-example
#
executable('datetime-example', 
           'datetime-example.cpp',
           dependencies: orion_dep,
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: log-example
#
executable('log-example', 
           'log-example.cpp',
           dependencies: orion_dep,
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: signal-example
#
executable('signal-example', 
           'signal-example.cpp',
           dependencies: orion_dep,
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: string-examples
#
executable('string-examples', 
           'string-examples.cpp',
           dependencies: orion_dep,
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: system-info
#
executable('system-info', 
           'system-info.cpp',
           dependencies: orion_dep,
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: hello-http-server
#
executable('hello-http-server', 
           'hello-http-server.cpp',
           dependencies: [orion_dep, orion_net_dep],
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: hello-http-client
#
executable('hello-http-client', 
           'hello-http-client.cpp',
           dependencies: [orion_dep, orion_net_dep],
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: hello-tcp-server
#
executable('hello-tcp-server', 
           'hello-tcp-server.cpp',
           dependencies: [orion_dep, orion_net_dep],
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: hello-tcp-client
#
executable('hello-tcp-client', 
           'hello-tcp-client.cpp',
           dependencies: [orion_dep, orion_net_dep],
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: calculator-rpc-client.cpp
#
executable('calculator-rpc-client', 
           'calculator-rpc-client.cpp',
           dependencies: [orion_dep, orion_net_dep],
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: calculator-rpc-server.cpp
#
executable('calculator-rpc-server', 
           'calculator-rpc-server.cpp',
           dependencies: [orion_dep, orion_net_dep],
           include_directories: global_includes,
           cpp_args: boost_cflags)

#--------------------------------------------------------------------------------------------------
# Example: art-example.cpp
#
executable('art-example', 
           'art-example.cpp',
           dependencies: orion_dep,
           include_directories: global_includes,
           cpp_args: boost_cflags)
