#
# Copyright (c) 2013-2017 Tomas Palazuelos
#
# Distributed under the MIT Software License. (See accompanying file LICENSE.md)
#
#--------------------------------------------------------------------------------------------------
# Include files
#

orion_incl = files(
   'orion/AsyncService.h',
   'orion/Chrono.h',
   'orion/Datetime.h',
   'orion/Encoding.h',
   'orion/ErrorMacros.h',
   'orion/Exception.h',
   'orion/impl/Chrono.ipp',
   'orion/impl/Datetime.ipp',
   'orion/Memory.h',
   'orion/Object.h',
   'orion/Orion-Stddefs.h',
   'orion/Signal.h',
   'orion/SourceLocation.h',
   'orion/String.h',
   'orion/System.h',
   'orion/Throw.h',
   'orion/Units.h',
   'orion/Utils.h',
   'orion/Uuid.h',
   # Config files
   'orion/Config.h',
   'orion/config/Bsd.h',
   'orion/config/Cygwin.h',
   'orion/config/Linux.h',
   'orion/config/Macos.h',
   'orion/config/Posix.h',
   'orion/config/Windows.h',
   # Logger files
   'orion/Log.h',
   'orion/log/BasicLogger.h',
   'orion/log/ExceptionRecord.h',
   'orion/log/Formatter.h',
   'orion/log/Function.h',
   'orion/log/impl/BasicLogger.ipp',
   'orion/log/impl/Logger.ipp',
   'orion/log/Level.h',
   'orion/log/Logger.h',
   'orion/log/LoggerImpl.h',
   'orion/log/LoggerService.h',
   'orion/log/Macros.h',
   'orion/log/OutputHandler.h',
   'orion/log/Record.h',
   # Unit test files
   'orion/Test.h',
   'orion/unittest/Test.h',
   'orion/unittest/TestMacros.h',
   'orion/unittest/TestOptions.h',
   'orion/unittest/TestOutput.h',
   'orion/unittest/TestResult.h',
   'orion/unittest/TestRunner.h',
   'orion/unittest/TestStdOutput.h',
   'orion/unittest/TestSuite.h',
   'orion/unittest/impl/Test.ipp',
   'orion/unittest/impl/TestResult.ipp'
   )

install_headers(orion_incl)

orion_net_incl = files(
   'orion/net/Address.h',
   'orion/net/AddressV4.h',
   'orion/net/AddressV6.h',
   'orion/net/Connection.h',
   'orion/net/EndPoint.h',
   'orion/net/Error.h',
   'orion/net/Types.h',
   'orion/net/Url.h',
   'orion/net/Utils.h',
   'orion/net/impl/Connection.ipp',
   # Http files
   'orion/net/http/Client.h',
   'orion/net/http/Cookies.h',
   'orion/net/http/Error.h',
   'orion/net/http/Request.h',
   'orion/net/http/Response.h',
   'orion/net/http/Server.h',
   'orion/net/http/Session.h',
   'orion/net/http/StatusCode.h',
   'orion/net/http/Utils.h',
   'orion/net/http/impl/StatusCode.ipp',
   'orion/net/http/impl/Utils.ipp',
   # RPC files
   'orion/net/rpc/Error.h',
   'orion/net/rpc/Method.h',
   'orion/net/rpc/Params.h',
   'orion/net/rpc/Result.h',
   'orion/net/rpc/Rpc.h',
   'orion/net/rpc/Service.h',
   'orion/net/rpc/Traits.h',
   # TCP files
   'orion/net/tcp/Connection.h',
   'orion/net/tcp/Server.h',
   'orion/net/tcp/Session.h',
   'orion/net/tcp/Utils.h',
   'orion/net/tcp/impl/Connection.ipp'
   )

install_headers(orion_net_incl)